# edge-bookmark-mcp-server

./: .claude_config.json  .gitignore  MCP_JSON_FIX_README.md  README.md  check_env.py  fix_imports.py  pyproject.toml  run_server.py
src/: __main__.py  analytics.py  bookmark_loader.py  config.py  exporter.py  exporter.py.backup  file_monitor.py  search_engine.py  server.py
tests/: install_and_test.ps1  simple_check.py  test_complete_server.py  test_components.py  test_server.py  test_simple.py  test_with_sample.py
tests/.dxt/: dxt.json
